removed swagger, batch error fixes
